<?xml version="1.0"?>
<package format="2">
  <name>final_project</name>
  <version>1.0.1</version>
  <description>Final package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>ugv_course_libs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
) <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  
  <export>
  </export>
</package>
