<?xml version="1.0"?>
<package format="2">
  <name>gps_sim_project</name>
  <version>2.0.2</version>
  <description>The gps_sim_project package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>ugv_course_libs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
)
  <export>
  </export>
</package>
