<?xml version="1.0"?>
<package format="2">
  <name>homework3</name>
  <version>2.0.2</version>
  <description>The homework3 package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>geometry_msg</depend>
  
  <export>
  </export>
</package>
 